--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
-    "@ton/core": "^0.57.0",
+    "@ton-api/client": "^0.2.0",
+    "@ton/core": "^0.59.0",
     "@tonconnect/sdk": "^3.0.5",
     "@tonconnect/ui-react": "^2.0.9",
     "bn.js": "^5.1.1",
